Update and rename index.html to  index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 		<title>我的第一个的网页：HTML</title>
 	</head>
 	<body>
-                <h1>我是网页中标题</h1>
+                <h1>life is a movie</h1>
 	</body>
 </html>
