--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>我的第一个的网页：HTML</title>
+		<title>life is a movie：HTML</title>
 	</head>
 	<body>
-                <h1>life is a movie</h1>
+                <h1>hello world</h1>
 	</body>
 </html>
