--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 		<title>life is a movie：HTML</title>
 	</head>
 	<body>
-                <h1>hello world</h1>
+                <h1><font color="pink" size="6">hello world</font></h1>
 	</body>
+	
 </html>
