--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>life is a movie🖕🖕🖕</title>
+		<title>life is a fucking movie🖕 🖕🖕</title>
 	</head>
 	<body>
-                <h1><font color="pink" size="6">hello world，6C 68 [+3∑] (x^2+Y^2-1)^3=x^2y^3</font></h1>
+                <h1><font color="pink" size="6">hello world 草泥马，6C 68 [+3∑] (x^2+Y^2-1)^3=x^2y^3</font></h1> 
 	</body>
 	
 </html>
