--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 		<title>life is a fucking movie🖕 🖕🖕</title>
 	</head>
 	<body>
-                <h1><font color="pink" size="6">hello world 草泥马，6C 68 [+3∑] (x^2+Y^2-1)^3=x^2y^3</font></h1> 
+                <h1><font color="bule" size="6">hello world </font></h1> 
 	</body>
 	
 </html>
